--- a/dopeticksApp/templates/register.html
+++ b/dopeticksApp/templates/register.html
@@ -2,15 +2,67 @@
 {% block content %}
 	<div class="content-section">
 		<form method="POST" action="">
-			{{ form.hidden_tag() }}		# Hidden tag method adds a CSRF token
+			<!-- # Hidden tag method adds a CSRF token -->
+			{{ form.hidden_tag() }}		
 			<fieldset class="form-group">
-				<legend class="border-bottom mb-4"> Join Today</legend>
+				<legend class="border-bottom mb-4"> Get your Dopeticks account today!</legend>
 				<div class="form-group">
-					{{ form.email.label(class="form-control-label") }}
-					{{ form.email(class="form-control form-control-lg") }}
+					{{ form.userFirstName.label(class="form-control-label") }}
+					{{ form.userFirstName(class="form-control form-control-lg") }}
 				</div>
-			</fieldset>
+				<div class="form-group">
+					{{ form.userLastName.label(class="form-control-label") }}
+					{{ form.userLastName(class="form-control form-control-lg") }}
+				</div>
+				<div class="form-group">
+					{{ form.userEmail.label(class="form-control-label") }} 
 
+					{% if form.userEmail.errors %}
+						{{ form.userEmail(class="form-control form-control-lg is-invalid")}}
+						<div class="invalid-feedback">
+							{% for error in form.userEmail.errors %}
+								<span> {{ error }} </span>
+							{% endfor %}
+					{% else %}
+						{{ form.userEmail(class="form-control form-control-lg") }}
+					{% endif %}	
+					
+				</div>
+				<!-- Password label and error messages -->
+				<div class="form-group">
+					{{ form.userPassword.label(class="form-control-label") }}
+					{% if form.userPassword.errors %}
+						{{ form.userPassword(class="form-control form-control-lg is-invalid")}}
+						<div class="invalid-feedback">
+							{% for error in form.userPassword.errors %}
+								<span> {{ error }} </span>
+							{% endfor %}
+					{% else %}
+						{{ form.userPassword(class="form-control form-control-lg") }}
+					{% endif %}	
+				</div>
+				<div class="form-group">
+					{{ form.confirmPassword.label(class="form-control-label") }}
+					{% if form.confirmPassword.errors %}
+						{{ form.confirmPassword(class="form-control form-control-lg is-invalid")}}
+						<div class="invalid-feedback">
+							{% for error in form.confirmPassword.errors %}
+								<span> {{ error }} </span>
+							{% endfor %}
+					{% else %}
+						{{ form.confirmPassword(class="form-control form-control-lg") }}
+					{% endif %}	
+				</div>
+
+			</fieldset>
+			<div class="form-group">
+					{{ form.submit(class="btn btn-outline-info") }}
+				</div>
 		</form>
+	</div>
+	<div class="border-top pt-3">
+		<small class="text-muted">
+			Already have an account? <a class="ml-2" href="{{ url_for('login') }}">Log in here</a>
+		</small>
 	</div>
 {% endblock content %}
