Trying to resolve conflicts

--- a/dopeticksApp/dopeticks/static/main.css
+++ b/dopeticksApp/dopeticks/static/main.css
@@ -6,6 +6,29 @@ body {
   margin-top: 5rem;
 }
 
+body.page-background {
+  background-image: url('static/images/register_back.png');
+  background-repeat: no-repeat;
+  background-position: right top;
+  width: 70%;
+}
+
+.divider:after,
+.divider:before {
+content: "";
+flex: 1;
+height: 1px;
+background: #eee;
+}
+.h-custom {
+height: calc(100% - 300px);
+}
+/*@media (max-width: 30rem) {
+.h-custom {
+height: 100%;
+}
+}*/
+
 h1, h2, h3, h4, h5, h6 {
   color: #444444;
 }
@@ -80,3 +103,20 @@ a.article-title:hover {
 .account-heading {
   font-size: 2.5rem;
 }
+
+#right-side {
+    width: 70%;
+}
+
+/*Login Page customization*/
+.login-btn{
+    width:100%;
+}
+
+.login-pic{
+    opacity: 100%;
+    z-index: -1;
+    margin-left:20%;
+}
+
+
