--- a/dopeticksApp/dopeticks/templates/home.html
+++ b/dopeticksApp/dopeticks/templates/home.html
@@ -1,12 +1,16 @@
 {% extends "layout.html" %}
 {% block content %}
 	{% for task in tasks %}
-		<h1>{{ task.taskTitle }}</h1>
-		<img class="rounded-circle article-img" src="{{ url_for('static', filename='profilePics/' + task.owner.userImage) }}">
-		<p> created by {{ task.owner.userFirstName}} {{ task.owner.userLastName}}</p>
-		<p> {{ task.taskDescription}}</p>
-		<p>  due on {{ task.taskDue.strftime('%d-%m-%Y') }}</p>
-		<!-- <p> {{ task.taskStatus }} -->
+		<div class="content-section">
+			<h1>{{ task.taskTitle }}</h1>
+			<img class="rounded-circle article-img" src="{{ url_for('static', filename='profilePics/' + task.owner.userImage) }}">
+			<p> created by {{ task.owner.userFirstName}} {{ task.owner.userLastName}}</p>
+			<p> {{ task.taskDescription}}</p>
+			<p>  due on {{ task.taskDue.strftime('%d-%m-%Y') }}</p>
+			<p> {{ task.taskStatus }}</p>
+			<a href={{ url_for('task', taskID=task.id) }}><button type="button" class="btn btn-outline-secondary">Edit</button></a>
+
+		</div>
 
 	{% endfor %}
 {% endblock content %}
