--- a/dopeticksApp/dopeticks/templates/home.html
+++ b/dopeticksApp/dopeticks/templates/home.html
@@ -1,6 +1,90 @@
 {% extends "layout.html" %}
 	{% block content %}
-{% for task in tasks %}
+
+	<section>
+		<div class="container">
+		    <div class="row d-flex justify-content-center align-items-center">
+		        <div class="col-md-4 col-xl-3">
+		            <div class="card bg-c-yellow order-card cardTag">
+		                <div class="card-block">
+		                    <h6 class="m-b-20">To do</h6>
+		                    <h2 class="text-right"><i class="fa fa-cart-plus f-left"></i><span>12</span></h2>
+		                </div>
+		            </div>
+		        </div>
+
+		        <div class="col-md-4 col-xl-3">
+		            <div class="card bg-c-blue order-card cardTag">
+		                <div class="card-block">
+		                    <h6 class="m-b-20">In progress</h6>
+		                    <h2 class="text-right"><i class="fa fa-rocket f-left"></i><span>2</span></h2>
+		                </div>
+		            </div>
+		        </div>
+
+		        <div class="col-md-4 col-xl-3">
+		            <div class="card bg-c-green order-card cardTag">
+		                <div class="card-block">
+		                    <h6 class="m-b-20">Done</h6>
+		                    <h2 class="text-right"><i class="fa fa-refresh f-left"></i><span>0</span></h2>
+		                </div>
+		            </div>
+		        </div>
+
+		        <div class="col-md-4 col-xl-3">
+		            <div class="card bg-c-pink order-card cardTag">
+		                <div class="card-block">
+		                    <h6 class="m-b-20">Overdue</h6>
+		                    <h2 class="text-right"><i class="fa fa-credit-card f-left"></i><span>0</span></h2>
+		                </div>
+		            </div>
+		        </div>
+			</div>
+			<div class="widget-49">
+				<a href={{ url_for('newTask') }} class="btn btn-sm btn-flash-border-primary">Add Task</a>
+			</div>
+		</div>
+	</section>
+
+
+	<section>
+		{% for task in tasks %}
+			<div class="container">
+				<div class="row d-flex justify-content-center align-items-center">
+					<div class="col-lg-12" style="margin-top: 5%;">
+						<div class="card card-margin">
+							<div class="card-header no-border">
+								<h5 class="card-title">{{ task.taskTitle }}</h5>
+							</div>
+							<div class="card-body pt-0">
+								<div class="widget-49">
+									<div class="widget-49-title-wrapper">
+										<div class="widget-49-date-primary">
+											<img class="rounded-circle article-img" src="{{ url_for('static', filename='profilePics/' + task.owner.userImage) }}">
+										</div>
+										<div class="widget-49-meeting-info">
+											<span class="widget-49-pro-title">{{ task.owner.userFirstName}}</span>
+											<span class="widget-49-meeting-time">Due on {{ task.taskDue.strftime('%d-%m-%Y') }}</span>
+										</div>
+									</div>
+									<ol class="widget-49-meeting-points">
+										<p> {{ task.taskDescription}}</p>
+									</ol>
+									<div class="widget-49-meeting-action">
+										<a href={{ url_for('task', taskID=task.id) }} class="btn btn-sm btn-flash-border-primary">Edit</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+	    {% endfor %}
+	</section>
+
+{% endblock content %}
+
+
 
 <!--		<div class="content-section">
 			<h1>{{ task.taskTitle }}</h1>
@@ -12,81 +96,3 @@
 			<a href={{ url_for('task', taskID=task.id) }}><button type="button" class="btn btn-outline-secondary">Edit</button></a>
 
 		</div>-->
-<section>
-<div class="container">
-    <div class="row d-flex justify-content-center align-items-center">
-        <div class="col-md-4 col-xl-3">
-            <div class="card bg-c-yellow order-card cardTag">
-                <div class="card-block">
-                    <h6 class="m-b-20">To do</h6>
-                    <h2 class="text-right"><i class="fa fa-cart-plus f-left"></i><span>12</span></h2>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-4 col-xl-3">
-            <div class="card bg-c-blue order-card cardTag">
-                <div class="card-block">
-                    <h6 class="m-b-20">In progress</h6>
-                    <h2 class="text-right"><i class="fa fa-rocket f-left"></i><span>2</span></h2>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-4 col-xl-3">
-            <div class="card bg-c-green order-card cardTag">
-                <div class="card-block">
-                    <h6 class="m-b-20">Done</h6>
-                    <h2 class="text-right"><i class="fa fa-refresh f-left"></i><span>0</span></h2>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-4 col-xl-3">
-            <div class="card bg-c-pink order-card cardTag">
-                <div class="card-block">
-                    <h6 class="m-b-20">Overdue</h6>
-                    <h2 class="text-right"><i class="fa fa-credit-card f-left"></i><span>0</span></h2>
-                </div>
-            </div>
-        </div>
-	</div>
-</div>
-</section>
-<section>
-
-<div class="container">
-	<div class="row d-flex justify-content-center align-items-center">
-		<div class="col-lg-12" style="margin-top: 5%;">
-			<div class="card card-margin">
-				<div class="card-header no-border">
-					<h5 class="card-title">{{ task.taskTitle }}</h5>
-				</div>
-				<div class="card-body pt-0">
-					<div class="widget-49">
-						<div class="widget-49-title-wrapper">
-							<div class="widget-49-date-primary">
-								<img class="rounded-circle article-img" src="{{ url_for('static', filename='profilePics/' + task.owner.userImage) }}">
-							</div>
-							<div class="widget-49-meeting-info">
-								<span class="widget-49-pro-title">{{ task.owner.userFirstName}}</span>
-								<span class="widget-49-meeting-time">Due on {{ task.taskDue.strftime('%d-%m-%Y') }}</span>
-							</div>
-						</div>
-						<ol class="widget-49-meeting-points">
-							<p> {{ task.taskDescription}}</p>
-						</ol>
-						<div class="widget-49-meeting-action">
-							<a href="#" class="btn btn-sm btn-flash-border-primary">Edit</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-    {% endfor %}
-</section>
-
-	{% endblock content %}
-
