--- a/dopeticksApp/dopeticks/templates/layout.html
+++ b/dopeticksApp/dopeticks/templates/layout.html
@@ -29,16 +29,21 @@
 		      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
 		        <span class="navbar-toggler-icon"></span>
 		      </button>
+		      <!-- Navbar Left Side -->
+
 		      <div class="collapse navbar-collapse" id="navbarToggle">
 		        <div class="navbar-nav mr-auto">
-		          <a class="nav-item nav-link" style="color:#424242;" href="{{ url_for('home') }}">Home</a>
+		        	{% if current_user.is_authenticated %}
+		        		<a class="nav-item nav-link"  style="color:#424242;" href="{{ url_for('dashboard') }}">Dashboard</a>
+		        	{% else %}
+		          	<a class="nav-item nav-link" style="color:#424242;" href="{{ url_for('home') }}">Home</a>
+		        	{% endif %}
 		          
 		        </div>
 		        <!-- Navbar Right Side -->
 		        <div class="navbar-nav">
 		        	<!-- # Using ginja2 conditional and using current_user.is_authenticated to check if user is logged in or not -->
-		        	{% if current_user.is_authenticated %}
-		        		<a class="nav-item nav-link"  style="color:#424242;" href="{{ url_for('dashboard') }}">Dashboard</a>
+		        	{% if current_user.is_authenticated %}		
 		        		<a class="nav-item nav-link"  style="color:#424242;" href="{{ url_for('account') }}">{{ current_user.userFirstName }} {{ current_user.userLastName }}</a>
 		        		<a class="nav-item nav-link"  style="color:#424242;" href="{{ url_for('logout') }}">Logout</a>
 		        	{% else %}
