Home is now for non-logged in users, Dashboard for logged in users. Users can now only see their own tasks, and relative positioning issues have should now be fixed

--- a/dopeticksApp/dopeticks/static/main.css
+++ b/dopeticksApp/dopeticks/static/main.css
@@ -1,10 +1,6 @@
 /*Example CSS here - @Ana feel free to change this!*/
 
-body {
-  background: #fafafa;
-  color: #333333;
-  margin-top: 5rem;
-}
+
 
 body.page-background {
   background-image: url('static/images/register_back.png');
@@ -125,9 +121,12 @@ a.article-title:hover {
 
 /*home page*/
 body{
+    position: relative;
     background: #F4F7FD;
-    margin-top:20px;
+    color: #333333;
+    margin-top: 5rem;
 }
+
 
 .card-margin {
     margin-bottom: 1.875rem;
