--- a/dopeticksApp/dopeticks/templates/home.html
+++ b/dopeticksApp/dopeticks/templates/home.html
@@ -1,98 +1,27 @@
+<!-- This will soon be transferred to the home.html page, with the home.html page content swapped here -->
+
 {% extends "layout.html" %}
-	{% block content %}
+{% block content %}
+	<section class="vh-40">
+<!--		Container settings-->
+		<div class="container-fluid py-5 h-100">
+			<div class="row d-flex justify-content-center align-items-center h-100 g-0" style="background-color: #C0DFE4; border-radius: 2rem;">
+				<div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+					<!--Just basic text here-->
+					<h2>Get your dopamine fix and manage your tasks with DopeTicks today!</h2>
+					<a href={{ url_for('register') }} class="btn btn-sm btn-outline-primary">Create New Account</a>
+					<a href={{ url_for('login') }} class="btn btn-sm btn-outline-secondary">Log In</a>
 
-	<section>
-		<div class="container">
-		    <div class="row d-flex justify-content-center align-items-center">
-		        <div class="col-md-4 col-xl-3">
-		            <div class="card bg-c-yellow order-card cardTag">
-		                <div class="card-block">
-		                    <h6 class="m-b-20">To do</h6>
-		                    <h2 class="text-right"><i class="fa fa-cart-plus f-left"></i><span>12</span></h2>
-		                </div>
-		            </div>
-		        </div>
-
-		        <div class="col-md-4 col-xl-3">
-		            <div class="card bg-c-blue order-card cardTag">
-		                <div class="card-block">
-		                    <h6 class="m-b-20">In progress</h6>
-		                    <h2 class="text-right"><i class="fa fa-rocket f-left"></i><span>2</span></h2>
-		                </div>
-		            </div>
-		        </div>
-
-		        <div class="col-md-4 col-xl-3">
-		            <div class="card bg-c-green order-card cardTag">
-		                <div class="card-block">
-		                    <h6 class="m-b-20">Done</h6>
-		                    <h2 class="text-right"><i class="fa fa-refresh f-left"></i><span>0</span></h2>
-		                </div>
-		            </div>
-		        </div>
-
-		        <div class="col-md-4 col-xl-3">
-		            <div class="card bg-c-pink order-card cardTag">
-		                <div class="card-block">
-		                    <h6 class="m-b-20">Overdue</h6>
-		                    <h2 class="text-right"><i class="fa fa-credit-card f-left"></i><span>0</span></h2>
-		                </div>
-		            </div>
-		        </div>
-			</div>
-			<div class="widget-49">
-				<a href={{ url_for('newTask') }} class="btn btn-sm btn-flash-border-primary">Add Task</a>
+					
+				</div>
+				<div class="col-lg-6 px-0 d-none d-lg-block">
+        			<img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
+          				alt="Login image" class ="login-pic" style="object-fit: cover; object-position: right;">
+				</div>
 			</div>
 		</div>
 	</section>
-
-
-	<section>
-		{% for task in tasks %}
-			<div class="container">
-				<div class="row d-flex justify-content-center align-items-center">
-					<div class="col-lg-12" style="margin-top: 5%;">
-						<div class="card card-margin">
-							<div class="card-header no-border">
-								<h5 class="card-title">{{ task.taskTitle }}</h5>
-							</div>
-							<div class="card-body pt-0">
-								<div class="widget-49">
-									<div class="widget-49-title-wrapper">
-										<div class="widget-49-date-primary">
-											<img class="rounded-circle article-img" src="{{ url_for('static', filename='profilePics/' + task.owner.userImage) }}">
-										</div>
-										<div class="widget-49-meeting-info">
-											<span class="widget-49-pro-title">{{ task.owner.userFirstName}}</span>
-											<span class="widget-49-meeting-time">Due on {{ task.taskDue.strftime('%d-%m-%Y') }}</span>
-										</div>
-									</div>
-									<ol class="widget-49-meeting-points">
-										<p> {{ task.taskDescription}}</p>
-									</ol>
-									<div class="widget-49-meeting-action">
-										<a href={{ url_for('task', taskID=task.id) }} class="btn btn-sm btn-flash-border-primary">Edit</a>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-	    {% endfor %}
-	</section>
-
 {% endblock content %}
 
 
 
-<!--		<div class="content-section">
-			<h1>{{ task.taskTitle }}</h1>
-			<img class="rounded-circle article-img" src="{{ url_for('static', filename='profilePics/' + task.owner.userImage) }}">
-			<p> created by {{ task.owner.userFirstName}} {{ task.owner.userLastName}}</p>
-			<p> {{ task.taskDescription}}</p>
-			<p>  due on {{ task.taskDue.strftime('%d-%m-%Y') }}</p>
-			<p> {{ task.taskStatus }}</p>
-			<a href={{ url_for('task', taskID=task.id) }}><button type="button" class="btn btn-outline-secondary">Edit</button></a>
-
-		</div>-->
