--- a/dopeticksApp/dopeticks/templates/dashboard.html
+++ b/dopeticksApp/dopeticks/templates/dashboard.html
@@ -10,7 +10,7 @@
 		    <div class="row d-flex justify-content-center align-items-center">
 
 		        <div class="col-md-4 col-xl-3">
-					<div class="card bg-c-yellow order-card cardTag" onclick="myFunction()">
+					<div class="card bg-c-yellow order-card cardTag" onclick="revealToDo()">
 						<div class="card-block">
 							<h6 class="m-b-20">To do</h6>
 							<h2 class="text-right"><i class="fa fa-cart-plus f-left"></i><span>{{ todo }}</span></h2>
@@ -19,7 +19,7 @@
 		        </div>
 
 		        <div class="col-md-4 col-xl-3">
-		            <div class="card bg-c-blue order-card cardTag">
+		            <div class="card bg-c-blue order-card cardTag" onclick="revealInProgress()">
 		                <div class="card-block">
 		                    <h6 class="m-b-20">In progress</h6>
 		                    <h2 class="text-right"><i class="fa fa-rocket f-left"></i><span>{{ doing }}</span></h2>
@@ -63,10 +63,10 @@
 
 
 	<section id="todo-section">
-		{% for task in tasks %}
-			<div class="container" >
-				<div class="row d-flex justify-content-center align-items-center">
-					<div class="col-lg-12" style="margin-top: 2%;">
+		<div class="container" >
+			<div class="row display-flex">
+				{% for task in todoTasks %}
+					<div class="col-lg-4" style="margin-top: 2%;">
 						<div class="card card-margin">
 							<div class="card-header no-border">
 								<h5 class="card-title">{{ task.taskTitle }}</h5>
@@ -96,10 +96,50 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				{% endfor %}
 			</div>
-	    {% endfor %}
+		</div>
 	</section>
+<!--In progress section-->
+	<section id="progress-section">
+		<div class="container" >
+			<div class="row display-flex">
+				{% for task in doingTasks %}
+					<div class="col-lg-4" style="margin-top: 2%;">
+						<div class="card card-margin">
+							<div class="card-header no-border">
+								<h5 class="card-title">{{ task.taskTitle }}</h5>
+							</div>
+							<div class="card-body pt-0">
+								<div class="widget-49">
+									<div class="widget-49-title-wrapper">
+										<div class="widget-49-date-primary">
+											<img class="rounded-circle article-img" src="{{ url_for('static', filename='profilePics/' + task.owner.userImage) }}">
+										</div>
+										<div class="widget-49-meeting-info">
+											<span class="widget-49-pro-title">{{ task.owner.userFirstName }}</span>
+											<span class="widget-49-meeting-time">Due on {{ task.taskDue.strftime('%d-%m-%Y') }}</span>
+											<span class="widget-49-meeting-time">Task status {{ task.taskStatus }}</span>
+											<span class="widget-49-meeting-time">Task priority {{ task.taskPriority }}</span>
+										</div>
+									</div>
+									<ol class="widget-49-meeting-points">
+										<p> {{ task.taskDescription}}</p>
+									</ol>
+									<div class="widget-49-meeting-action">
+
+										<a href={{ url_for('tasks.updateTask', taskID=task.id) }} class="btn btn-sm btn-flash-border-primary">Edit</a>
+
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				{% endfor %}
+			</div>
+		</div>
+	</section>
+
 
 {% endblock content %}
 
