--- a/dopeticks/templates/createTask.html
+++ b/dopeticks/templates/createTask.html
@@ -77,7 +77,7 @@
 
 					<div class="row justify-content-end">
 						<div class="form-group mr-3">
-							<button class="btn btn-info">Cancel</button>
+							<a href={{ url_for('main.dashboard') }} class="btn btn-info">Cancel</a>
 							<button type="submit" class="btn btn-outline-info">Create</button>
 						</div>
 					</div>
