--- a/dopeticks/templates/dashboard.html
+++ b/dopeticks/templates/dashboard.html
@@ -83,7 +83,31 @@
 									<div class="widget-49-meeting-action">
 
 										<a href={{ url_for('tasks.updateTask', taskID=task.id) }} class="btn btn-sm btn-flash-border-primary btn-outline-info">Edit</a>
-										<a href="" class="btn btn-sm btn-flash-border-danger btn-outline-danger">Delete</a>
+									    <button type="button" class="btn btn-sm btn-flash-border-danger btn-outline-danger" data-toggle="modal" data-target="#deleteModal">Delete</button>
+
+									    <!-- Delete Modal -->
+										<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+										  <div class="modal-dialog">
+										    <div class="modal-content">
+										      <div class="modal-header">
+										        <h5 class="modal-title" id="deleteModalLabel">Modal title</h5>
+										        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+										          <span aria-hidden="true">&times;</span>
+										        </button>
+										      </div>
+										      <div class="modal-body">
+										        Are you sure you want to delete this task? (Deleted tasks will be archived for 90 days before being permanently deleted)
+										      </div>
+										      <div class="modal-footer">
+										        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+										        <form action={{ url_for('tasks.deleteTask', taskID=task.id) }} method="POST">
+										        	<input class="" type="submit" value="Yes, delete this task">
+										        </form>
+
+										      </div>
+										    </div>
+										  </div>
+										</div>
 
 									</div>
 								</div>
@@ -216,17 +240,8 @@
 		</div>
 	</section>
 
+
+	
 {% endblock content %}
 
 
-
-<!--		<div class="content-section">
-			<h1>{{ task.taskTitle }}</h1>
-			<img class="rounded-circle article-img" src="{{ url_for('static', filename='profilePics/' + task.owner.userImage) }}">
-			<p> created by {{ task.owner.userFirstName}} {{ task.owner.userLastName}}</p>
-			<p> {{ task.taskDescription}}</p>
-			<p>  due on {{ task.taskDue.strftime('%d-%m-%Y') }}</p>
-			<p> {{ task.taskStatus }}</p>
-			<a href={{ url_for('task', taskID=task.id) }}><button type="button" class="btn btn-outline-secondary">Edit</button></a>
-
-		</div>-->
