--- a/dopeticks/templates/layout.html
+++ b/dopeticks/templates/layout.html
@@ -13,6 +13,7 @@
 
     <!-- Linking our custom CSS -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+  	<script src="https://kit.fontawesome.com/2ca52e1c9f.js" crossorigin="anonymous"></script>
 
 
 	{% if title %}
@@ -103,6 +104,7 @@
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 		<script src="{{ url_for('static', filename='myscripts.js') }}"></script>
+
 
 	</body>
 </html>
